// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should correctly render activity state 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <ActiveState
      currentUser={
        Object {
          "id": 10,
          "name": "Kanye West",
        }
      }
      inputState={
        Object {
          "currentUser": Object {
            "id": 10,
            "name": "Kanye West",
          },
        }
      }
      items={
        Array [
          Object {
            "createdAt": 1234567890,
            "createdBy": Object {
              "id": 11,
              "name": "Akon",
            },
            "id": "123",
            "taggedMessage": "test @[123:Jeezy] @[10:Kanye West]",
            "type": "comment",
          },
          Object {
            "assignees": Array [],
            "createdAt": 1234567891,
            "createdBy": Object {
              "id": 10,
              "name": "JayZ",
            },
            "id": "1234",
            "taggedMessage": "test",
            "type": "task",
          },
        ]
      }
      onCommentDelete={[Function]}
      onTaskAssignmentUpdate={[Function]}
      onTaskDelete={[Function]}
      onTaskEdit={[Function]}
      onVersionInfo={[Function]}
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should correctly render empty state 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={false}
      showCommentMessage={false}
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should correctly render empty state with loading indicator 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={true}
      showCommentMessage={false}
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed should render approval comment form if comment submit handler is passed 1`] = `
<div
  className="bcs-activity-feed"
  onKeyDown={[Function]}
>
  <div
    className="bcs-activity-feed-items-container"
  >
    <EmptyState
      isLoading={false}
      showCommentMessage={true}
    />
  </div>
  <ApprovalCommentForm
    approverSelectorContacts={Array []}
    className="bcs-activity-feed-comment-input"
    createComment={[Function]}
    createTask={[Function]}
    getApproverContactsWithQuery={[Function]}
    getMentionContactsWithQuery={[Function]}
    isOpen={false}
    mentionSelectorContacts={Array []}
    onCancel={[Function]}
    onFocus={[Function]}
    onSubmit={[Function]}
    user={
      Object {
        "id": 10,
        "name": "Kanye West",
      }
    }
  />
</div>
`;
